# auto-re

./: Cargo.toml  build.rs  flake.nix
.opencode/: opencode.jsonc
src/: auto_re.rs  engine.rs  event.rs  lib.rs  main.rs  tui.rs
src/engine/: graph.rs
src/tui/: state.rs
