[package]
name = "auto-re"
version = "0.1.0"
edition = "2024"

[lib]
name = "auto_re"
path = "src/auto_re.rs"

[[bin]]
name = "auto-re"
path = "src/main.rs"

[dependencies]
thiserror    = "2.0.18" # https://docs.rs/thiserror
crossterm    = "0.29.0" # https://docs.rs/crossterm
ratatui      = "0.30.0" # https://docs.rs/ratatui
idalib       = "0.7.2"  # https://docs.rs/idalib
gdbstub      = "0.7.9"  # https://docs.rs/gdbstub
llama_cpp    = "0.3.2"  # https://docs.rs/llama_cpp
#async-openai = "0.32.3" # https://docs.rs/async-openai/

[build-dependencies]
idalib-build = "0.7"

[lints.clippy]
pedantic = "warn"
